# hr-multi-agent-system

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
data/: sample_benefits.json
scripts/: seed_rag.py
src/agents/: base.py  benefits_analyst.py  report_compiler.py  researcher.py  role_designer.py
src/api/: main.py
src/core/: graph.py  settings.py  state.py
src/tools/: rag_retriever.py  search.py
src/utils/: logging_conf.py
