[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-multi-agent-system"
version = "0.1.0"
description = "Multi-agent HR system with RAG, orchestration, and observability"
authors = [{ name = "Francis Batista", email = "francisrod01@users.noreply.github.com" }]
dependencies = [
    "langchain>=0.2.0,<0.3.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchain-chroma>=0.1.0,<0.2.0",
    "langgraph>=0.0.20,<0.1.0",
    "tavily-python>=0.3.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=2.2.2,<2.3.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
    "tavily-python>=0.3.0,<0.4.0",
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "slack-sdk>=3.26.0,<4.0.0",
    "httpx>=0.25.0,<0.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "black>=23.12.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
